resolved main section overlapping landing

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -86,7 +86,8 @@ nav {
     background-size: 100%;
     background-position: -50px -150px;
     width: 100%;
-    height: 100vh;
+    // Using 100vh makes the main tag overlap the landing section
+    height: 100%;
     position: relative;
     .container-custom {
         position: relative;
@@ -417,6 +418,10 @@ footer {
                 right: 0;
             }
         }
+    }
+    main {
+    //    position: relative;
+    //    top: 475px;
     }
     // Tabs
     //Removing horizontal scroll bar of tabs
